--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       text-align: center; /* Center everything */
     }
     h1 {
-      color: #007bff; /* Blue heading */
+      color: #008bff; /* Blue heading */
     }
     button {
       background-color: #007bff; /* Blue button */
@@ -31,8 +31,8 @@
 </head>
 <body>
   <!-- This is what shows on the page -->
-  <h1>Welcome to Daniel's Website!</h1>
-  <p>This is your simple Mini App website inside Telegram.</p>
+  <h1>Welcome to GOLD SOFT DRINKS!</h1>
+  <p>This is Mini App website for golden team.</p>
   <p id="userName">Loading your name...</p>
   <button id="vibrateButton">Click Me!</button>
 
