--- a/index.html
+++ b/index.html
@@ -6,35 +6,68 @@
     <title>Gold Soft Drinks</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <header class="app-header">
-            <div class="logo">G</div> 
-            <h1>GOLD SOFT DRINKS</h1>
-        </header>
 
-        <div class="tabs">
-            <button class="tab-btn active" onclick="showTab('shop')">Shop</button>
-            <button class="tab-btn" onclick="showTab('about')">About</button>
+    <header class="app-header">
+        <div class="logo-container">
+            <div class="gold-orb"></div>
+            <h1>GOLD</h1>
+        </div>
+        <div class="cart-icon" onclick="viewCart()">
+            <i class="fa-solid fa-shopping-bag"></i>
+            <span id="cart-count">0</span>
+        </div>
+    </header>
+
+    <main id="main-content">
+        
+        <div class="hero">
+            <h2>Taste the <span class="gold-text">Luxury</span></h2>
+            <p>Premium soft drinks for golden moments.</p>
         </div>
 
-        <section id="shop" class="tab-content active">
-            <div class="grid" id="product-grid">
-                </div>
-        </section>
+        <div class="filters">
+            <button class="chip active" onclick="filterProducts('all')">All</button>
+            <button class="chip" onclick="filterProducts('soda')">Sparkling</button>
+            <button class="chip" onclick="filterProducts('energy')">Energy</button>
+        </div>
 
-        <section id="about" class="tab-content">
-            <div class="about-card">
-                <h3>Our Mission</h3>
-                <p>Crafting the finest gold-standard beverages since 1998.</p>
-                <div class="stats-row">
-                    <div class="stat"><strong>450</strong><span>Employees</span></div>
-                    <div class="stat"><strong>100k</strong><span>Daily Cap.</span></div>
-                </div>
+        <div class="grid" id="product-grid"></div>
+
+        <div id="about-section" class="hidden">
+            <div class="info-card">
+                <h3><i class="fa-solid fa-building"></i> Company Info</h3>
+                <p><strong>Employees:</strong> 450+ Specialists</p>
+                <p><strong>Capacity:</strong> 100,000 Bottles/Day</p>
+                <p><strong>HQ:</strong> Addis Ababa, Ethiopia</p>
             </div>
-        </section>
+        </div>
+    </main>
+
+    <div id="product-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn" onclick="closeModal()">&times;</span>
+            <img id="modal-img" src="" alt="">
+            <h2 id="modal-title"></h2>
+            <p id="modal-desc"></p>
+            <div class="price-tag" id="modal-price"></div>
+            <button class="add-btn" id="modal-add-btn">ADD TO CART</button>
+        </div>
     </div>
+
+    <nav class="bottom-nav">
+        <button class="nav-item active" onclick="switchTab('shop')">
+            <i class="fa-solid fa-store"></i>
+            <span>Shop</span>
+        </button>
+        <button class="nav-item" onclick="switchTab('about')">
+            <i class="fa-solid fa-info-circle"></i>
+            <span>About</span>
+        </button>
+    </nav>
+
     <script src="app.js"></script>
 </body>
 </html>
