--- a/index.html
+++ b/index.html
@@ -2,72 +2,31 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Gold Soft Drinks</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>YouTube Data Saver</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-
-    <header class="app-header">
-        <div class="logo-container">
-            <div class="gold-orb"></div>
-            <h1>GOLD</h1>
+    <div class="container">
+        <h1>Search & Watch YouTube (Data Efficient)</h1>
+        <input type="text" id="searchInput" placeholder="Search videos...">
+        <button id="searchBtn">Search</button>
+        <div id="controls" style="display: none;">
+            <label>Quality: 
+                <select id="qualitySelect">
+                    <option value="low">Low (360p - Data Saver)</option>
+                    <option value="medium">Medium (480p)</option>
+                    <option value="high">High (720p+)</option>
+                </select>
+            </label>
+            <label><input type="checkbox" id="audioOnly"> Audio Only (Max Data Save)</label>
         </div>
-        <div class="cart-icon" onclick="viewCart()">
-            <i class="fa-solid fa-shopping-bag"></i>
-            <span id="cart-count">0</span>
-        </div>
-    </header>
-
-    <main id="main-content">
-        
-        <div class="hero">
-            <h2>Taste the <span class="gold-text">Luxury</span></h2>
-            <p>Premium soft drinks for golden moments.</p>
-        </div>
-
-        <div class="filters">
-            <button class="chip active" onclick="filterProducts('all')">All</button>
-            <button class="chip" onclick="filterProducts('soda')">Sparkling</button>
-            <button class="chip" onclick="filterProducts('energy')">Energy</button>
-        </div>
-
-        <div class="grid" id="product-grid"></div>
-
-        <div id="about-section" class="hidden">
-            <div class="info-card">
-                <h3><i class="fa-solid fa-building"></i> Company Info</h3>
-                <p><strong>Employees:</strong> 450+ Specialists</p>
-                <p><strong>Capacity:</strong> 100,000 Bottles/Day</p>
-                <p><strong>HQ:</strong> Addis Ababa, Ethiopia</p>
-            </div>
-        </div>
-    </main>
-
-    <div id="product-modal" class="modal">
-        <div class="modal-content">
-            <span class="close-btn" onclick="closeModal()">&times;</span>
-            <img id="modal-img" src="" alt="">
-            <h2 id="modal-title"></h2>
-            <p id="modal-desc"></p>
-            <div class="price-tag" id="modal-price"></div>
-            <button class="add-btn" id="modal-add-btn">ADD TO CART</button>
+        <div id="results"></div>
+        <div id="player" style="display: none;">
+            <iframe id="ytPlayer" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
-
-    <nav class="bottom-nav">
-        <button class="nav-item active" onclick="switchTab('shop')">
-            <i class="fa-solid fa-store"></i>
-            <span>Shop</span>
-        </button>
-        <button class="nav-item" onclick="switchTab('about')">
-            <i class="fa-solid fa-info-circle"></i>
-            <span>About</span>
-        </button>
-    </nav>
-
-    <script src="app.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
