--- a/index.html
+++ b/index.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YouTube Data Saver</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
+  <title>YouTube Quick Finder</title>
+  <link rel="stylesheet" href="styles.css?v=6" />
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
-<body>
-    <div class="container">
-        <h1>Search & Watch YouTube (Data Efficient)</h1>
-        <input type="text" id="searchInput" placeholder="Search videos...">
-        <button id="searchBtn">Search</button>
-        <div id="controls" style="display: none;">
-            <label>Quality: 
-                <select id="qualitySelect">
-                    <option value="low">Low (360p - Data Saver)</option>
-                    <option value="medium">Medium (480p)</option>
-                    <option value="high">High (720p+)</option>
-                </select>
-            </label>
-            <label><input type="checkbox" id="audioOnly"> Audio Only (Max Data Save)</label>
-        </div>
-        <div id="results"></div>
-        <div id="player" style="display: none;">
-            <iframe id="ytPlayer" width="100%" height="315" frameborder="0" allowfullscreen></iframe>
-        </div>
+<body class="tg-theme">
+  <div class="container">
+
+    <!-- Header with theme-aware title -->
+    <header class="header">
+      <h1>YouTube Quick Finder</h1>
+      <div class="search-wrapper">
+        <input type="text" id="searchInput" placeholder="Search songs, artists, Ethiopia music..." autocomplete="off" />
+        <button id="clearBtn" class="clear-btn" aria-label="Clear search">×</button>
+        <button id="searchBtn" class="search-btn">Search</button>
+      </div>
+    </header>
+
+    <!-- Loading / Skeleton -->
+    <div id="loading" class="loading hidden">
+      <div class="spinner"></div>
+      <p>Looking for videos...</p>
     </div>
-    <script src="script.js"></script>
+
+    <!-- Results grid -->
+    <div id="results" class="results-grid"></div>
+
+    <!-- Empty state -->
+    <div id="emptyState" class="empty-state hidden">
+      <div class="emoji">🔍</div>
+      <p>Search for music, videos, or anything on YouTube</p>
+      <small>Try: Teddy Afro, Oromiffa music, new Ethiopian hits</small>
+    </div>
+
+    <!-- Player section -->
+    <div id="playerSection" class="player-section hidden">
+      <div class="player-header">
+        <button id="backBtn" class="back-btn">← Back</button>
+        <h2 id="nowPlayingTitle">Now Playing</h2>
+      </div>
+      <div class="video-wrapper">
+        <iframe id="ytPlayer" frameborder="0" allowfullscreen allow="autoplay"></iframe>
+      </div>
+      <div class="player-controls">
+        <label>
+          <input type="checkbox" id="audioOnly" /> Audio only (save data)
+        </label>
+        <select id="qualitySelect">
+          <option value="low">Low (360p – saves data)</option>
+          <option value="medium" selected>Medium (480p)</option>
+          <option value="high">High (720p+)</option>
+        </select>
+      </div>
+    </div>
+
+  </div>
+
+  <script src="script.js?v=6"></script>
 </body>
 </html>
