--- a/index.html
+++ b/index.html
@@ -1,64 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>YouTube Quick Finder</title>
-  <link rel="stylesheet" href="styles.css?v=6" />
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>EthioTube Lite</title>
+    <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="tg-theme">
-  <div class="container">
+<body>
+    <div id="app">
+        <header>
+            <h1>EthioTube <span>Lite</span></h1>
+            <p id="welcome-user"></p>
+        </header>
 
-    <!-- Header with theme-aware title -->
-    <header class="header">
-      <h1>YouTube Quick Finder</h1>
-      <div class="search-wrapper">
-        <input type="text" id="searchInput" placeholder="Search songs, artists, Ethiopia music..." autocomplete="off" />
-        <button id="clearBtn" class="clear-btn" aria-label="Clear search">×</button>
-        <button id="searchBtn" class="search-btn">Search</button>
-      </div>
-    </header>
+        <form id="search-form">
+            <div class="search-wrapper">
+                <input type="text" id="search-input" placeholder="Search for videos..." autocomplete="off">
+                <button type="submit" id="search-button">🔍</button>
+            </div>
+        </form>
 
-    <!-- Loading / Skeleton -->
-    <div id="loading" class="loading hidden">
-      <div class="spinner"></div>
-      <p>Looking for videos...</p>
+        <div id="video-results">
+            <div class="placeholder">Search above to find videos</div>
+        </div>
     </div>
 
-    <!-- Results grid -->
-    <div id="results" class="results-grid"></div>
-
-    <!-- Empty state -->
-    <div id="emptyState" class="empty-state hidden">
-      <div class="emoji">🔍</div>
-      <p>Search for music, videos, or anything on YouTube</p>
-      <small>Try: Teddy Afro, Oromiffa music, new Ethiopian hits</small>
-    </div>
-
-    <!-- Player section -->
-    <div id="playerSection" class="player-section hidden">
-      <div class="player-header">
-        <button id="backBtn" class="back-btn">← Back</button>
-        <h2 id="nowPlayingTitle">Now Playing</h2>
-      </div>
-      <div class="video-wrapper">
-        <iframe id="ytPlayer" frameborder="0" allowfullscreen allow="autoplay"></iframe>
-      </div>
-      <div class="player-controls">
-        <label>
-          <input type="checkbox" id="audioOnly" /> Audio only (save data)
-        </label>
-        <select id="qualitySelect">
-          <option value="low">Low (360p – saves data)</option>
-          <option value="medium" selected>Medium (480p)</option>
-          <option value="high">High (720p+)</option>
-        </select>
-      </div>
-    </div>
-
-  </div>
-
-  <script src="script.js?v=6"></script>
+    <script src="script.js"></script>
 </body>
 </html>
