--- a/index.html
+++ b/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>EthioTube Lite</title>
-    <script src="https://telegram.org/js/telegram-web-app.js"></script>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Quick Form</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </head>
 <body>
-    <div id="app">
-        <header>
-            <h1>EthioTube <span>Lite</span></h1>
-            <p id="welcome-user"></p>
-        </header>
+  <div class="container">
+    <h1>Quick Profile</h1>
+    <p id="greeting">Hello!</p>
 
-        <form id="search-form">
-            <div class="search-wrapper">
-                <input type="text" id="search-input" placeholder="Search for videos..." autocomplete="off">
-                <button type="submit" id="search-button">🔍</button>
-            </div>
-        </form>
+    <form id="user-form" class="form">
+      <label>
+        Full Name
+        <input type="text" id="name" placeholder="John Doe" required minlength="2" maxlength="60"/>
+        <span class="error"></span>
+      </label>
 
-        <div id="video-results">
-            <div class="placeholder">Search above to find videos</div>
-        </div>
-    </div>
+      <label>
+        Age
+        <input type="number" id="age" placeholder="25" min="13" max="120" required/>
+        <span class="error"></span>
+      </label>
 
-    <script src="script.js"></script>
+      <label>
+        Email
+        <input type="email" id="email" placeholder="you@example.com" required/>
+        <span class="error"></span>
+      </label>
+
+      <label>
+        Country
+        <select id="country" required>
+          <option value="" disabled selected>Select country</option>
+          <option value="ET">Ethiopia</option>
+          <option value="KE">Kenya</option>
+          <option value="US">United States</option>
+          <option value="IN">India</option>
+          <option value="Other">Other</option>
+        </select>
+        <span class="error"></span>
+      </label>
+
+      <label class="checkbox-label">
+        <input type="checkbox" id="agree" required/>
+        I agree to terms & privacy
+      </label>
+
+      <div class="buttons">
+        <button type="button" id="clear-btn">Clear</button>
+        <button type="submit" id="submit-btn">Submit</button>
+      </div>
+    </form>
+
+    <p id="status" class="status hidden"></p>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
