--- a/index.html
+++ b/index.html
@@ -1,29 +1,374 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>YouTube Lite</title>
-  <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bottled Water Store • Mini App</title>
+
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
+  <style>
+    :root {
+      --bg: #ffffff;
+      --text: #000000;
+      --hint: #999999;
+      --button: #0088cc;
+      --button-text: #ffffff;
+      --secondary: #f0f0f0;
+      --accent: #2e7d32;
+      --danger: #d32f2f;
+    }
+
+    * { margin:0; padding:0; box-sizing:border-box; }
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+      background: var(--bg);
+      color: var(--text);
+      min-height: 100vh;
+      padding: 16px;
+      padding-bottom: 90px;
+      transition: background 0.4s, color 0.4s;
+    }
+
+    h1 { font-size: 26px; text-align: center; margin: 0 0 20px; }
+
+    .product {
+      background: var(--secondary);
+      border-radius: 16px;
+      padding: 16px;
+      margin-bottom: 16px;
+      position: relative;
+      overflow: hidden;
+      transition: transform 0.15s;
+    }
+
+    .product:active { transform: scale(0.98); }
+
+    .product h3 { font-size: 19px; margin-bottom: 6px; }
+    .product .desc { color: var(--hint); font-size: 14px; margin-bottom: 10px; }
+    .product .price {
+      font-size: 20px;
+      font-weight: 700;
+      color: var(--accent);
+      margin-bottom: 12px;
+    }
+
+    .added-flash {
+      position: absolute;
+      inset: 0;
+      background: rgba(46,125,50,0.15);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 32px;
+      font-weight: bold;
+      color: var(--accent);
+      opacity: 0;
+      pointer-events: none;
+      transition: opacity 0.5s;
+      z-index: 2;
+    }
+
+    .added-flash.show { opacity: 1; }
+
+    .qty-controls {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      margin-top: 10px;
+    }
+
+    .qty-btn {
+      width: 38px;
+      height: 38px;
+      border-radius: 50%;
+      background: var(--button);
+      color: white;
+      font-size: 20px;
+      line-height: 38px;
+      text-align: center;
+      cursor: pointer;
+      user-select: none;
+      transition: background 0.2s;
+    }
+
+    .qty-btn:active { background: #006699; }
+
+    #products { margin-bottom: 100px; }
+
+    #cart-summary {
+      position: fixed;
+      bottom: 0; left: 0; right: 0;
+      background: var(--bg);
+      border-top: 1px solid var(--secondary);
+      padding: 12px 16px;
+      box-shadow: 0 -4px 12px rgba(0,0,0,0.08);
+      transform: translateY(100%);
+      transition: transform 0.4s cubic-bezier(0.34, 1.56, 0.64, 1);
+    }
+
+    #cart-summary.visible { transform: translateY(0); }
+
+    .cart-header { display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px; }
+    .cart-header h2 { font-size: 18px; }
+
+    #cart-items { list-style: none; max-height: 180px; overflow-y: auto; margin-bottom: 12px; }
+    .cart-item {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 0;
+      border-bottom: 1px solid var(--secondary);
+      font-size: 15px;
+    }
+
+    .cart-item-name { flex: 1; }
+    .cart-item-price { font-weight: bold; color: var(--accent); min-width: 80px; text-align: right; }
+
+    .remove-btn {
+      color: var(--danger);
+      font-size: 18px;
+      width: 32px;
+      height: 32px;
+      line-height: 32px;
+      text-align: center;
+      cursor: pointer;
+    }
+
+    #total {
+      font-size: 19px;
+      font-weight: 700;
+      text-align: right;
+      margin: 8px 0 12px;
+      transition: transform 0.3s;
+    }
+
+    #total.changed { transform: scale(1.08); }
+    #total.changed.done { transform: scale(1); }
+
+    #empty { text-align: center; color: var(--hint); padding: 30px 0; font-size: 16px; }
+
+    @media (min-width: 500px) {
+      body { max-width: 480px; margin: 0 auto; }
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <h1>YouTube Lite</h1>
-    <p id="greeting">Fast & light</p>
 
-    <div class="search">
-      <input id="query" type="search" placeholder="Search or tap trending..." autocomplete="off">
-      <button id="search-btn">Go</button>
+  <h1>Bottled Water Store</h1>
+  <div id="products"></div>
+
+  <div id="cart-summary">
+    <div class="cart-header">
+      <h2>Your Cart</h2>
+      <span id="cart-count">0</span>
     </div>
 
-    <div id="player-container" class="player hidden"></div>
+    <ul id="cart-items"></ul>
 
-    <ul id="results" class="results"></ul>
+    <div id="total">Total: 0 Stars</div>
 
-    <div id="loading" class="loading hidden">Loading...</div>
+    <div id="empty">Cart is empty — add some water! 💧</div>
   </div>
 
-  <script src="script.js"></script>
+  <script>
+    const tg = window.Telegram.WebApp;
+    tg.ready();
+    tg.expand();
+    tg.MainButton.setParams({
+      text: 'Checkout',
+      color: '#0088cc',
+      text_color: '#ffffff'
+    });
+    tg.MainButton.hide();
+
+    // Theme sync
+    function applyTheme() {
+      const th = tg.themeParams;
+      document.documentElement.style.setProperty('--bg', th.bg_color || '#ffffff');
+      document.documentElement.style.setProperty('--text', th.text_color || '#000');
+      document.documentElement.style.setProperty('--hint', th.hint_color || '#999');
+      document.documentElement.style.setProperty('--button', th.button_color || '#0088cc');
+      document.documentElement.style.setProperty('--button-text', th.button_text_color || '#fff');
+      document.documentElement.style.setProperty('--secondary', th.secondary_bg_color || '#f0f0f0');
+    }
+    applyTheme();
+    tg.onEvent('themeChanged', applyTheme);
+
+    // ─── Products ────────────────────────────────────────
+    const products = [
+      { id:1, name:"Spring Water 500 ml", price:45,  desc:"Pure natural spring" },
+      { id:2, name:"Mineral Water 1 L",   price:85,  desc:"Rich in minerals" },
+      { id:3, name:"Alkaline Water 750 ml",price:120, desc:"pH 8.5+ ionized" },
+      { id:4, name:"Sparkling 500 ml",    price:65,  desc:"Naturally carbonated" },
+    ];
+
+    let cart = [];
+
+    // ─── Cart persistence ────────────────────────────────
+    function loadCart() {
+      tg.CloudStorage.getItem('cart_v2', (err, val) => {
+        if (!err && val) {
+          cart = JSON.parse(val);
+          renderCart();
+          updateMainButton();
+        }
+      });
+    }
+
+    function saveCart() {
+      tg.CloudStorage.setItem('cart_v2', JSON.stringify(cart));
+    }
+
+    // ─── Cart logic ──────────────────────────────────────
+    function addToCart(product) {
+      let item = cart.find(i => i.id === product.id);
+      if (item) item.qty++;
+      else cart.push({ ...product, qty: 1 });
+
+      saveCart();
+      tg.HapticFeedback.impactOccurred('medium');
+      renderCart();
+      updateMainButton();
+
+      // Flash feedback
+      const card = document.querySelector(`[data-id="${product.id}"]`);
+      if (card) {
+        const flash = card.querySelector('.added-flash');
+        flash.classList.add('show');
+        setTimeout(() => flash.classList.remove('show'), 800);
+      }
+    }
+
+    function changeQty(id, delta) {
+      const item = cart.find(i => i.id === id);
+      if (!item) return;
+      item.qty = Math.max(1, item.qty + delta);
+      if (item.qty === 0) removeFromCart(id);
+      else {
+        saveCart();
+        renderCart();
+        tg.HapticFeedback.impactOccurred('light');
+      }
+    }
+
+    function removeFromCart(id) {
+      cart = cart.filter(i => i.id !== id);
+      saveCart();
+      renderCart();
+      tg.HapticFeedback.notificationOccurred('warning');
+      updateMainButton();
+    }
+
+    // ─── Rendering ───────────────────────────────────────
+    function renderProducts() {
+      const cont = document.getElementById('products');
+      products.forEach(p => {
+        const div = document.createElement('div');
+        div.className = 'product';
+        div.dataset.id = p.id;
+        div.innerHTML = `
+          <h3>${p.name}</h3>
+          <div class="desc">${p.desc}</div>
+          <div class="price">${p.price} Stars</div>
+          <div class="qty-controls">
+            <div class="qty-btn" onclick="addToCartFromId(${p.id})">+</div>
+          </div>
+          <div class="added-flash">Added!</div>
+        `;
+        cont.appendChild(div);
+      });
+    }
+
+    window.addToCartFromId = id => {
+      const p = products.find(x => x.id === id);
+      if (p) addToCart(p);
+    };
+
+    function renderCart() {
+      const list = document.getElementById('cart-items');
+      const totalEl = document.getElementById('total');
+      const countEl = document.getElementById('cart-count');
+      const emptyEl = document.getElementById('empty');
+      const summary = document.getElementById('cart-summary');
+
+      list.innerHTML = '';
+
+      if (cart.length === 0) {
+        emptyEl.style.display = 'block';
+        countEl.textContent = '0';
+        totalEl.textContent = 'Total: 0 Stars';
+        summary.classList.remove('visible');
+        tg.MainButton.hide();
+        return;
+      }
+
+      emptyEl.style.display = 'none';
+      summary.classList.add('visible');
+
+      let total = 0;
+      cart.forEach(item => {
+        total += item.price * item.qty;
+        const li = document.createElement('li');
+        li.className = 'cart-item';
+        li.innerHTML = `
+          <span class="cart-item-name">${item.name}</span>
+          <div class="qty-controls" style="margin:0; width:auto;">
+            <div class="qty-btn" onclick="changeQty(${item.id}, -1)">−</div>
+            <span style="min-width:24px; text-align:center;">${item.qty}</span>
+            <div class="qty-btn" onclick="changeQty(${item.id}, 1)">+</div>
+          </div>
+          <span class="cart-item-price">${item.price * item.qty} Stars</span>
+          <span class="remove-btn" onclick="removeFromCart(${item.id})">×</span>
+        `;
+        list.appendChild(li);
+      });
+
+      countEl.textContent = cart.length;
+      totalEl.textContent = `Total: ${total} Stars`;
+
+      // Animate total
+      totalEl.classList.add('changed');
+      setTimeout(() => totalEl.classList.remove('changed'), 600);
+
+      updateMainButton();
+    }
+
+    function updateMainButton() {
+      if (cart.length === 0) {
+        tg.MainButton.hide();
+        return;
+      }
+
+      const sum = cart.reduce((s, i) => s + i.price * i.qty, 0);
+      tg.MainButton.setText(`Checkout • ${sum} Stars`);
+      tg.MainButton.show();
+    }
+
+    // ─── Checkout simulation ─────────────────────────────
+    tg.MainButton.onClick(() => {
+      if (cart.length === 0) return;
+
+      tg.HapticFeedback.impactOccurred('heavy');
+
+      // In real app → POST to backend → tg.openInvoice(...)
+      alert(`Order summary:\n${cart.map(i => `${i.name} × ${i.qty} = ${i.price*i.qty} Stars`).join('\n')}\n\nTotal: ${cart.reduce((s,i)=>s+i.price*i.qty,0)} Stars\n\n(Real version would open Stars invoice here)`);
+
+      // Simulate success
+      setTimeout(() => {
+        alert("Payment simulation: SUCCESS! Thank you! 💧");
+        cart = [];
+        saveCart();
+        renderCart();
+        tg.MainButton.hide();
+      }, 900);
+    });
+
+    // ─── Start ───────────────────────────────────────────
+    renderProducts();
+    loadCart();
+    renderCart();
+  </script>
+
 </body>
 </html>
