--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Bottled Water Store • Mini App</title>
+  <title>ET Bottled Water Market  • Mini App</title>
 
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
@@ -270,7 +270,7 @@
 
     // ─── Products (6 brands with placeholders) ───────────────────────────────
     const products = [
-      { id:1, name:"Brand 1: Spring Water", price:45, desc:"Pure natural spring water from the mountains. Refreshing and crisp taste.", image: "https://placehold.co/300x200?text=Brand+1" },
+      { id:1, name:"Brand 1: Spring Water", price:45, desc:"Pure natural spring water from the mountains. Refreshing and crisp taste.", image: "https://ibb.co/7Nb5gzKz" },
       { id:2, name:"Brand 2: Mineral Water", price:85, desc:"Naturally mineralized water with essential electrolytes for hydration.", image: "https://placehold.co/300x200?text=Brand+2" },
       { id:3, name:"Brand 3: Alkaline Water", price:120, desc:"High pH water to balance your body's acidity. Smooth and clean.", image: "https://placehold.co/300x200?text=Brand+3" },
       { id:4, name:"Brand 4: Sparkling Water", price:65, desc:"Carbonated water with a fizzy twist. Perfect for mixing drinks.", image: "https://placehold.co/300x200?text=Brand+4" },
