--- a/index.html
+++ b/index.html
@@ -181,27 +181,27 @@
       <span>Gold Water</span>
     </div>
     <div class="category-tile" onclick="showBrand('one')">
-      <img src="https://via.placeholder.com/60?text=One" alt="One">
+      <img src="https://i.postimg.cc/Vvf49NBk/one-water.jpg" alt="One">
       <span>One Water</span>
     </div>
     <div class="category-tile" onclick="showBrand('africa')">
-      <img src="https://via.placeholder.com/60?text=Africa" alt="Africa">
+      <img src="https://i.postimg.cc/0NGB7hR3/africa.jpg" alt="Africa">
       <span>Africa Water</span>
     </div>
     <div class="category-tile" onclick="showBrand('yes')">
-      <img src="https://via.placeholder.com/60?text=Yes" alt="Yes">
+      <img src="https://i.postimg.cc/rw1JHWnJ/yes.webp" alt="Yes">
       <span>Yes Water</span>
     </div>
     <div class="category-tile" onclick="showBrand('dega')">
-      <img src="https://via.placeholder.com/60?text=Dega" alt="Dega">
+      <img src="https://i.postimg.cc/9FG86vz9/dega.webp" alt="Dega">
       <span>Dega Water</span>
     </div>
     <div class="category-tile" onclick="showBrand('fham')">
-      <img src="https://via.placeholder.com/60?text=Fham" alt="Fham">
+      <img src="https://i.postimg.cc/wjqVSMCp/fham.jpg" alt="Fham">
       <span>Fham Water</span>
     </div>
     <div class="category-tile" onclick="showBrand('arki')">
-      <img src="https://via.placeholder.com/60?text=Arki" alt="Arki">
+      <img src="https://i.postimg.cc/TwDqrDDf/arki.webp" alt="Arki">
       <span>Arki Water</span>
     </div>
   </div>
