--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style>
     :root {
-      --green: #00b140;
+      --green: #D4F1F9;
       --dark-green: #009933;
       --bg: #f8f9fa;
       --text: #333;
