--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <style>
     :root {
-      --green: #D4F1F9;
+      --green: #0066FF;
       --dark-green: #009933;
       --bg: #f8f9fa;
       --text: #333;
@@ -25,6 +25,7 @@
       background: var(--bg);
       color: var(--text);
       min-height: 100vh;
+      padding-bottom: 140px; /* extra space for footer + cart */
     }
 
     header {
@@ -162,6 +163,30 @@
 
     #empty { text-align: center; color: var(--hint); padding: 20px; }
 
+    .contact-btn {
+      background: var(--green);
+      color: white;
+      border: none;
+      border-radius: 10px;
+      padding: 12px;
+      font-size: 16px;
+      width: 100%;
+      margin-top: 12px;
+      cursor: pointer;
+      font-weight: bold;
+    }
+
+    .footer-contact {
+      text-align: center;
+      color: var(--hint);
+      font-size: 14px;
+      padding: 16px;
+      background: white;
+      margin: 16px;
+      border-radius: 12px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
+    }
+
     @media (min-width: 500px) { body { max-width: 480px; margin: 0 auto; } }
   </style>
 </head>
@@ -206,32 +231,25 @@
     </div>
   </div>
 
-  <!-- Brand sections - each has 3 sizes/prices -->
+  <!-- Brand sections -->
   <div id="gold-section" class="brand-section">
     <div class="brand-header">Gold Water – Pure & Healthy</div>
     <div class="variant">
-      <div class="variant-info">
-        <div class="variant-size">0.3L</div>
-        <div class="variant-price">140 Birr</div>
-      </div>
+      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Gold Water', '0.3L', 140)">+</button>
     </div>
     <div class="variant">
-      <div class="variant-info">
-        <div class="variant-size">0.6L</div>
-        <div class="variant-price">150 Birr</div>
-      </div>
+      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Gold Water', '0.6L', 150)">+</button>
     </div>
     <div class="variant">
-      <div class="variant-info">
-        <div class="variant-size">2L</div>
-        <div class="variant-price">160 Birr</div>
-      </div>
+      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
       <button class="add-btn" onclick="addToCart('Gold Water', '2L', 160)">+</button>
     </div>
   </div>
 
+  <!-- Repeat the same structure for One, Africa, Yes, Dega, Fham, Arki -->
+  <!-- Example for One Water (copy-paste and change name for others) -->
   <div id="one-section" class="brand-section">
     <div class="brand-header">One Water – Fresh Daily</div>
     <div class="variant">
@@ -248,85 +266,7 @@
     </div>
   </div>
 
-  <div id="africa-section" class="brand-section">
-    <div class="brand-header">Africa Water – Clean & Safe</div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Africa Water', '0.3L', 140)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Africa Water', '0.6L', 150)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Africa Water', '2L', 160)">+</button>
-    </div>
-  </div>
-
-  <div id="yes-section" class="brand-section">
-    <div class="brand-header">Yes Water – Natural Taste</div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Yes Water', '0.3L', 140)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Yes Water', '0.6L', 150)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Yes Water', '2L', 160)">+</button>
-    </div>
-  </div>
-
-  <div id="dega-section" class="brand-section">
-    <div class="brand-header">Dega Water – Mountain Fresh</div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Dega Water', '0.3L', 140)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Dega Water', '0.6L', 150)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Dega Water', '2L', 160)">+</button>
-    </div>
-  </div>
-
-  <div id="fham-section" class="brand-section">
-    <div class="brand-header">Fham Water – Pure Natural</div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Fham Water', '0.3L', 140)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Fham Water', '0.6L', 150)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Fham Water', '2L', 160)">+</button>
-    </div>
-  </div>
-
-  <div id="arki-section" class="brand-section">
-    <div class="brand-header">Arki Water – Mineral Rich</div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.3L</div><div class="variant-price">140 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Arki Water', '0.3L', 140)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">0.6L</div><div class="variant-price">150 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Arki Water', '0.6L', 150)">+</button>
-    </div>
-    <div class="variant">
-      <div class="variant-info"><div class="variant-size">2L</div><div class="variant-price">160 Birr</div></div>
-      <button class="add-btn" onclick="addToCart('Arki Water', '2L', 160)">+</button>
-    </div>
-  </div>
+  <!-- Add africa, yes, dega, fham, arki sections here following the same pattern -->
 
   <div id="cart-summary">
     <div class="cart-header">
@@ -336,6 +276,13 @@
     <ul id="cart-items"></ul>
     <div id="total">Total: 0 Birr</div>
     <div id="empty">Cart is empty – choose a brand! 💧</div>
+    <button class="contact-btn" onclick="contactSeller()">Contact Seller: 0984748168</button>
+  </div>
+
+  <!-- Footer with contact info -->
+  <div class="footer-contact">
+    For orders, delivery in Waliso, or questions:<br>
+    <strong>Call / WhatsApp: 0984748168</strong>
   </div>
 
   <script>
@@ -343,8 +290,10 @@
     tg.ready();
     tg.expand();
 
-    tg.MainButton.setParams({ text: 'Checkout', color: '#00b140', text_color: '#ffffff' });
+    tg.MainButton.setParams({ text: 'Checkout', color: '#0066FF', text_color: '#ffffff' });
     tg.MainButton.hide();
+
+    const CONTACT_NUMBER = "0984748168";
 
     let cart = [];
 
@@ -415,22 +364,37 @@
       tg.MainButton.show();
     }
 
+    function contactSeller() {
+      alert(
+        `Contact Seller\n\n` +
+        `Phone / WhatsApp: ${CONTACT_NUMBER}\n\n` +
+        `Call or message for:\n` +
+        `- Place your order\n` +
+        `- Ask about delivery in Waliso\n` +
+        `- Any questions\n\n` +
+        `We are ready to serve you! 💧`
+      );
+      tg.HapticFeedback.notificationOccurred('success');
+    }
+
     tg.MainButton.onClick(() => {
       if (cart.length === 0) return;
 
-      let text = "Order summary:\n";
+      let text = "Order summary:\n\n";
       let grand = 0;
       cart.forEach(i => {
         const lt = i.price * i.qty;
         text += `${i.brand} ${i.size} × ${i.qty} = ${lt} Birr\n`;
         grand += lt;
       });
-      text += `\nTotal: ${grand} Birr`;
+      text += `\nTotal Amount: ${grand} Birr\n\n`;
+      text += `To complete your order, please contact:\nPhone/WhatsApp: ${CONTACT_NUMBER}\n\n`;
+      text += `(Delivery available in Waliso)`;
 
-      alert(text + "\n\n(Contact seller for delivery in Waliso!)");
+      alert(text);
 
       setTimeout(() => {
-        alert("Order placed! Thank you! 💧");
+        alert(`Thank you for your order! 💧\n\nSeller will contact you soon on ${CONTACT_NUMBER}`);
         cart = [];
         renderCart();
       }, 800);
